# kreditomat-backend

./: .dockerignore  .env.example  .gitignore  Dockerfile  Procfile  README.md  docker-compose.yml  nixpacks.toml  pyproject.toml  pytest.ini  railway.json  railway.toml  requirements.txt
.github/workflows/: deploy.yml
alembic/: env.py
alembic/versions/: 001_initial_migration.py
app/: main.py
app/api/v1/: applications.py  auth.py  offers.py  personal_data.py  referrals.py
app/api/v1/endpoints/: health.py
app/core/: config.py  jwt.py  redis.py  utils.py
app/db/: session.py
app/models/: __init__.py  application.py  bank_offer.py  personal_data.py  user.py
app/schemas/: application.py  auth.py  bank_offer.py  personal_data.py  referral.py
app/services/: calculator.py  detection.py  pdn.py  referral.py  scoring.py  telegram_gateway.py
docs/: DEPLOYMENT.md  TESTING.md
scripts/: create_migration.sh  init_db.py  seed_data.py  start.sh
tests/: conftest.py  test_applications.py  test_auth.py  test_health.py  test_offers.py  test_personal_data.py  test_referrals.py
tests/services/: test_detection.py  test_pdn.py  test_referral.py  test_scoring.py
